--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,61 @@
       rel="stylesheet"
     />
   </head>
+  <style>
+    .loader {
+      white-space: pre;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 10em;
+      color: #f5f5f5;
+      letter-spacing: 10px;
+    }
+    .loader:before {
+      white-space: pre;
+      content: "Cloud Genshin Impact";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      color: #000;
+      overflow: hidden;
+      -webkit-animation: animate 8s linear infinite;
+              animation: animate 8s linear infinite;
+      border-right: 3px solid #000;
+    }
+
+    @-webkit-keyframes animate {
+      0% {
+        width: 0;
+      }
+      50% {
+        width: 100%;
+      }
+      100% {
+        width: 0;
+      }
+    }
+
+    @keyframes animate {
+      0% {
+        width: 0;
+      }
+      50% {
+        width: 100%;
+      }
+      100% {
+        width: 0;
+      }
+    }
+  </style>
   <body class="mat-typography">
-    <app-root></app-root>
+    <app-root>
+      <h1 class="loader">Cloud Genshin Impact</h1>
+    </app-root>
   </body>
 </html>
