optimize the index page

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>云原神</title>
+    <title>Cloud Genshin Impact</title>
     <base href="/"/>
+    <meta name="description" content="A Genshin Impact Damage Calculator For All Characters (English/日本語/繁體中文/简体中文) " />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
