update: remove unused libs and components, support PWA

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Cloud Genshin Impact</title>
     <base href="/"/>
-    <meta name="description" content="A Genshin Impact Damage Calculator For All Characters (English/日本語/繁體中文/简体中文) " />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <meta name="description" content="A Genshin Impact Damage Calculator For All Characters (English/日本語/繁體中文/简体中文) "/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/x-icon" href="favicon.png"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#fafafa">
   </head>
   <style>
     .loader {
@@ -73,5 +69,6 @@
     <app-root>
       <h1 class="loader">Cloud Genshin Impact</h1>
     </app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
