--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A Genshin Impact Damage Calculator For All Characters (English/日本語/繁體中文/简体中文) "/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/x-icon" href="favicon.png"/>
+    <link rel="apple-touch-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -65,6 +66,14 @@
       }
     }
   </style>
+  <script>
+    window.addEventListener('beforeinstallprompt', (e) => {
+      window.installPop = e;
+      if(window.installPopCallBack){
+        window.installPopCallBack();
+      }
+    });
+  </script>
   <body class="mat-typography">
     <app-root>
       <h1 class="loader">Cloud Genshin Impact</h1>
