--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#fafafa">
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GY4RG5CPMV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GY4RG5CPMV');
+  </script>
   <style>
     .loader {
       white-space: pre;
