--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
 
     gtag('config', 'G-GY4RG5CPMV');
   </script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "77db12e0049b4404a674392c073b0ca9"}'></script>
   <style>
     .loader {
       white-space: pre;
