--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Cloud Genshin Impact</title>
+    <title>Inteyvat</title>
     <base href="/"/>
-    <meta name="description" content="A Genshin Impact Damage Calculator For All Characters (English/日本語/繁體中文/简体中文) "/>
+    <meta name="description" content="Genshin Impact Calculator (English/日本語/繁體中文/简体中文)"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/x-icon" href="favicon.png"/>
     <link rel="apple-touch-icon" href="favicon.png">
@@ -40,7 +40,7 @@
     }
     .loader:before {
       white-space: pre;
-      content: "Cloud Genshin Impact";
+      content: "Inteyvat";
       position: absolute;
       top: 0;
       left: 0;
@@ -87,7 +87,7 @@
   </script>
   <body class="mat-typography">
     <app-root>
-      <h1 class="loader">Cloud Genshin Impact</h1>
+      <h1 class="loader">Inteyvat</h1>
     </app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
