--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
   </script>
   <!-- Cloudflare Web Analytics -->
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "77db12e0049b4404a674392c073b0ca9"}'></script>
+  <!-- Umami Analytics -->
+  <script async src="https://umami.sirokuma.cc/script.js" data-website-id="108b2bbf-f0c0-466a-8fa3-79207c601b99"></script>
   <style>
     .loader {
       white-space: pre;
